crates/proto/tests/snapshots/snapshots__pair_status_reply_accepted.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "state": "accepted",
  "accepted": {
    "storage_device_name": "Home PC",
    "pairing_epoch": "epoch-1"
  }
}
