crates/proto/tests/snapshots/snapshots__pair_status_reply_denied.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "state": "denied",
  "msg_key": "err.not_authorized"
}
