crates/proto/tests/snapshots/snapshots__pair_status_request.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "request_id": "0123456789abcdef0123456789abcdef"
}
