crates/proto/tests/snapshots/snapshots__req_envelope_hex.snap
---
source: crates/proto/tests/snapshots.rs
expression: hex
---
77 00 00 00 7b 22 69 64 22 3a 22 35 35 30 65 38 34 30 30 2d 65 32 39 62 2d 34 31 64 34 2d 61 37 31 36 2d 34 34 36 36 35 35 34 34 30 30 30 30 22 2c 22 6d 65 74 68 6f 64 22 3a 22 74 69 6d 65 6c 69 6e 65 2e 70 61 67 65 22 2c 22 70 61 72 61 6d 73 22 3a 7b 22 63 75 72 73 6f 72 22 3a 6e 75 6c 6c 2c 22 6c 69 6d 69 74 22 3a 32 30 30 7d 2c 22 6d 69 6e 5f 76 65 72 22 3a 31 7d
