crates/proto/tests/snapshots/snapshots__resp_err_envelope_hex.snap
---
source: crates/proto/tests/snapshots.rs
expression: hex
---
6f 00 00 00 7b 22 69 64 22 3a 22 35 35 30 65 38 34 30 30 2d 65 32 39 62 2d 34 31 64 34 2d 61 37 31 36 2d 34 34 36 36 35 35 34 34 30 30 30 30 22 2c 22 6f 6b 22 3a 66 61 6c 73 65 2c 22 65 72 72 6f 72 22 3a 7b 22 63 6f 64 65 22 3a 22 4e 4f 54 5f 46 4f 55 4e 44 22 2c 22 6d 73 67 5f 6b 65 79 22 3a 22 65 72 72 2e 6e 6f 74 5f 66 6f 75 6e 64 22 7d 7d
