crates/proto/tests/snapshots/snapshots__resp_err_envelope_json.snap
---
source: crates/proto/tests/snapshots.rs
expression: pretty
---
{
  "error": {
    "code": "NOT_FOUND",
    "msg_key": "err.not_found"
  },
  "id": "550e8400-e29b-41d4-a716-446655440000",
  "ok": false
}
