crates/proto/tests/snapshots/snapshots__resp_ok_envelope_hex.snap
---
source: crates/proto/tests/snapshots.rs
expression: hex
---
59 00 00 00 7b 22 69 64 22 3a 22 35 35 30 65 38 34 30 30 2d 65 32 39 62 2d 34 31 64 34 2d 61 37 31 36 2d 34 34 36 36 35 35 34 34 30 30 30 30 22 2c 22 6f 6b 22 3a 74 72 75 65 2c 22 72 65 73 75 6c 74 22 3a 7b 22 69 74 65 6d 73 22 3a 5b 5d 2c 22 6e 65 78 74 22 3a 6e 75 6c 6c 7d 7d
